@@ -27,7 +27,6 @@ endm
 @dbgdef ?PHYSDBG ;1=enable displays in physical memory handling
 @dbgdef ?MAPDBG  ;1=enable mapping handling
 
-?BUFFERED equ 0 ;1=buffer output in a XMS memory block
 ?USEMONO equ 0  ;1=use monochrome monitor for dbg displays
 
 ?DBGOUT  equ ?V86DBG + ?DMADBG + ?VDSDBG + ?EMSDBG + ?UMBDBG + ?A20DBG + ?EMBDBG + ?EMUDBG + ?I15DBG + ?VCPIDBG + ?USEMONO + ?POOLDBG + ?INITDBG + ?HLTDBG + ?UNLDBG + ?RBTDBG + ?EXCDBG + ?PHYSDBG + ?MAPDBG
