@@ -5,6 +5,8 @@
  - address region 11xxxx-3FFFFF is now only mapped as needed.
  - optional kernel-debugger-aware variant calls int 68h for deinitialization.
  - better log displays via macro @dprintf.
+ - log displays redirected to kernel debugger if one has been detected.
+ - buffered output of log displays removed.
 
  12.02.2024: v5.84
 
